// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty list 1`] = `
<div class="app-playersListFallback">
  There are no players yet
</div>
`;

exports[`renders filled list 1`] = `
<div class="app-playersList">
  <div class="playersList-playerItem playersList-playerItem__status_offline">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="🛦 Flying ℃omradE 🛦" class="playerItem-img"></div>
    <div class="playerItem-name">
      🛦 Flying ℃omradE 🛦
    </div>
    <div class="playerItem-status">
      offline
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face2.jpg" alt="𝕯esperate 𝕭ℓⱭⅆe 𝕽unner" class="playerItem-img"></div>
    <div class="playerItem-name">
      𝕯esperate 𝕭ℓⱭⅆe 𝕽unner
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face3.jpg" alt="Fluffy" class="playerItem-img"></div>
    <div class="playerItem-name">
      Fluffy
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="Appel82" class="playerItem-img"></div>
    <div class="playerItem-name">
      Appel82
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face2.jpg" alt="No. 428" class="playerItem-img"></div>
    <div class="playerItem-name">
      No. 428
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="&quot;Matic&quot;" class="playerItem-img"></div>
    <div class="playerItem-name">
      "Matic"
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="“Maverick”" class="playerItem-img"></div>
    <div class="playerItem-name">
      “Maverick”
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="braveheart" class="playerItem-img"></div>
    <div class="playerItem-name">
      braveheart
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="-=~0verthehor!zon~=-" class="playerItem-img"></div>
    <div class="playerItem-name">
      -=~0verthehor!zon~=-
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face3.jpg" alt="Justdoit" class="playerItem-img"></div>
    <div class="playerItem-name">
      Justdoit
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
</div>
`;

exports[`watchs outer store modify players list itself 1`] = `
<div class="app-playersList">
  <div class="playersList-playerItem playersList-playerItem__status_status">
    <div class="playerItem-avatar"><img src="avatar" alt="name" class="playerItem-img"></div>
    <div class="playerItem-name">
      name
    </div>
    <div class="playerItem-status">
      status
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face2.jpg" alt="𝕯esperate 𝕭ℓⱭⅆe 𝕽unner" class="playerItem-img"></div>
    <div class="playerItem-name">
      𝕯esperate 𝕭ℓⱭⅆe 𝕽unner
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face3.jpg" alt="Fluffy" class="playerItem-img"></div>
    <div class="playerItem-name">
      Fluffy
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="Appel82" class="playerItem-img"></div>
    <div class="playerItem-name">
      Appel82
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face2.jpg" alt="No. 428" class="playerItem-img"></div>
    <div class="playerItem-name">
      No. 428
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="&quot;Matic&quot;" class="playerItem-img"></div>
    <div class="playerItem-name">
      "Matic"
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="“Maverick”" class="playerItem-img"></div>
    <div class="playerItem-name">
      “Maverick”
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="braveheart" class="playerItem-img"></div>
    <div class="playerItem-name">
      braveheart
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="-=~0verthehor!zon~=-" class="playerItem-img"></div>
    <div class="playerItem-name">
      -=~0verthehor!zon~=-
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face3.jpg" alt="Justdoit" class="playerItem-img"></div>
    <div class="playerItem-name">
      Justdoit
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
</div>
`;

exports[`watchs outer store modify players list itself 2`] = `
<div class="app-playersList">
  <div class="playersList-playerItem playersList-playerItem__status_status">
    <div class="playerItem-avatar"><img src="avatar" alt="name" class="playerItem-img"></div>
    <div class="playerItem-name">
      name
    </div>
    <div class="playerItem-status">
      status
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face2.jpg" alt="𝕯esperate 𝕭ℓⱭⅆe 𝕽unner" class="playerItem-img"></div>
    <div class="playerItem-name">
      𝕯esperate 𝕭ℓⱭⅆe 𝕽unner
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face3.jpg" alt="Fluffy" class="playerItem-img"></div>
    <div class="playerItem-name">
      Fluffy
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="Appel82" class="playerItem-img"></div>
    <div class="playerItem-name">
      Appel82
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face2.jpg" alt="No. 428" class="playerItem-img"></div>
    <div class="playerItem-name">
      No. 428
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="&quot;Matic&quot;" class="playerItem-img"></div>
    <div class="playerItem-name">
      "Matic"
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="“Maverick”" class="playerItem-img"></div>
    <div class="playerItem-name">
      “Maverick”
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face4.jpg" alt="braveheart" class="playerItem-img"></div>
    <div class="playerItem-name">
      braveheart
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
  <div class="playersList-playerItem playersList-playerItem__status_online">
    <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="-=~0verthehor!zon~=-" class="playerItem-img"></div>
    <div class="playerItem-name">
      -=~0verthehor!zon~=-
    </div>
    <div class="playerItem-status">
      online
    </div>
  </div>
</div>
`;

exports[`watchs outer store modify some players data 1`] = `
<div class="playersList-playerItem playersList-playerItem__status_offline">
  <div class="playerItem-avatar"><img src="dev/profiles/face1.jpg" alt="🛦 Flying ℃omradE 🛦" class="playerItem-img"></div>
  <div class="playerItem-name">
    🛦 Flying ℃omradE 🛦
  </div>
  <div class="playerItem-status">
    offline
  </div>
</div>
`;

exports[`watchs outer store modify some players data 2`] = `
<div class="playersList-playerItem playersList-playerItem__status_status">
  <div class="playerItem-avatar"><img src="avatar" alt="name" class="playerItem-img"></div>
  <div class="playerItem-name">
    name
  </div>
  <div class="playerItem-status">
    status
  </div>
</div>
`;
